fixing: naming errors, wrong colors, game buttons display with notes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,7 @@ body {
   }
 }
 
+/* Background image */
 img.background {
   min-height: 100%;
   min-width: 1024px;
@@ -48,6 +49,16 @@ img.background {
   }
 }
 
+/* General styles */
+@keyframes fade{
+  20%{
+    opacity: 1;
+  }
+  80%{
+    opacity: 1;
+  }
+}
+
 .simone {
   height: 30rem;
   width: 30rem;
@@ -63,9 +74,19 @@ img.background {
 
   button {
     cursor: pointer;
-    border: solid .6rem $prime;
     height: 50%;
     width: 50%;
+    opacity: 1;
+    border: solid 2px $prime;
+    border-radius: 10px;
+    font-size: 4rem;
+    color: $second;
+    margin: 0;
+  }
+
+  button.click {
+    opacity: 0;
+    animation: fade infinite 5s;
   }
 
   button.red {
@@ -82,6 +103,7 @@ img.background {
 
   button.yellow {
     background-color: yellow;
+    color: $prime;
   }
 
   .info {
@@ -98,17 +120,43 @@ img.background {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    text-align: center;
+
+    * {
+      margin-bottom: 0.5rem;
+    }
+
+    .turn {
+      max-width: 80%;
+    }
   }
 }
 
-//
+button {
+  color: $second;
+  background-color: $prime;
+  font-size: 1.4rem;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.5rem 0.9rem;
+  margin: 0.5rem;
+}
 
-/* Modal button */
-#myBtn {
+.controls {
+  margin-top: 2rem;
+}
+
+#info-button {
+  margin-right: 1rem;
+}
+
+
+/* Info modal button */
+#info-button {
   align-self: flex-end;
 }
 
-/* The Modal (background) */
+/* Modal background */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -123,13 +171,13 @@ img.background {
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content */
+/* Modal content */
 .modal-content {
   position: relative;
   background-color: #fefefe;
   margin: auto;
   padding: 0;
-  border: 1px solid #888;
+  border: none;
   width: 80%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
@@ -138,7 +186,7 @@ img.background {
   animation-duration: 0.4s
 }
 
-/* Add Animation */
+/* Modal animations */
 @-webkit-keyframes animatetop {
   from {top:-300px; opacity:0} 
   to {top:0; opacity:1}
@@ -149,7 +197,7 @@ img.background {
   to {top:0; opacity:1}
 }
 
-/* The Close Button */
+/* Modal Close Button */
 .close {
   color: white;
   float: right;
@@ -166,21 +214,19 @@ img.background {
 
 .modal-header {
   padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
+  background-color: $prime;
+  color: $second;
 }
 
 .modal-body {padding: 2px 16px;}
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
+  background-color: $prime;
+  color: $second;
 }
 
-//
-
-
+/* Blob title effects */
 svg {
   position: absolute;
   top: -4000px;
